tests/baselines/reference/staticMemberExportAccess.errors.txt
tests/cases/compiler/staticMemberExportAccess.ts(14,39): error TS2351: This expression is not constructable.
  Type 'Sammy' has no construct signatures.
tests/cases/compiler/staticMemberExportAccess.ts(17,18): error TS2576: Property 'bar' does not exist on type 'Sammy'. Did you mean to access the static member 'Sammy.bar' instead?
tests/cases/compiler/staticMemberExportAccess.ts(18,18): error TS2339: Property 'x' does not exist on type 'Sammy'.


==== tests/cases/compiler/staticMemberExportAccess.ts (3 errors) ====
    class Sammy {
       foo() { return "hi"; }
      static bar() {
        return -1;
       }
    }
    module Sammy {
        export var x = 1;
    }
    interface JQueryStatic {
        sammy: Sammy; // class instance
    }
    var $: JQueryStatic;
    var instanceOfClassSammy: Sammy = new $.sammy(); // should be error
                                          ~~~~~~~
!!! error TS2351: This expression is not constructable.
!!! error TS2351:   Type 'Sammy' has no construct signatures.
    var r1 = instanceOfClassSammy.foo(); // r1 is string
    var r2 = $.sammy.foo();
    var r3 = $.sammy.bar(); // error
                     ~~~
!!! error TS2576: Property 'bar' does not exist on type 'Sammy'. Did you mean to access the static member 'Sammy.bar' instead?
    var r4 = $.sammy.x; // error
                     ~
!!! error TS2339: Property 'x' does not exist on type 'Sammy'.
    
    Sammy.bar();